--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,16 +14,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  lint-hadolint:
-    name: Hadolint
-    runs-on: ubuntu-latest
-    steps:
-      - name: ⤵️ Check out code from GitHub
-        uses: actions/checkout@v3
-      - name: 🚀 Run Hadolint
-        uses: brpaz/hadolint-action@v1.5.0
-        with:
-          dockerfile: "./Dockerfile"
+  # lint-hadolint:
+  #   name: Hadolint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: ⤵️ Check out code from GitHub
+  #       uses: actions/checkout@v3
+  #     - name: 🚀 Run Hadolint
+  #       uses: brpaz/hadolint-action@v1.5.0
+  #       with:
+  #         dockerfile: "./Dockerfile"
   lint-json:
     name: JSON Lint
     runs-on: ubuntu-latest
@@ -75,7 +75,7 @@ jobs:
   build:
     name: Build ${{ matrix.architecture }}
     needs:
-      - lint-hadolint
+      # - lint-hadolint
       - lint-json
       - lint-markdown
       - lint-prettier
