--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
     uses: timmo001/workflows/.github/workflows/lint-markdownlint.yml@master
   lint-prettier:
     uses: timmo001/workflows/.github/workflows/lint-prettier.yml@master
+    with:
+      file-types: "{json,yml,yaml}"
   lint-shellcheck:
     name: Shellcheck
     runs-on: ubuntu-latest
